<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_Events" Id="{5bac88ed-846d-46c2-8d1b-65bf26f28153}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_Events :
(
	// Enum for events and alarms different severity
	INFO 	:= 1,
	WARNING := 2,
	ERROR	:= 3,
	CRITICAL:= 4
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>